pc/etc/rules.v4
# Generated by iptables-save v1.4.21 on Sat Jun  6 14:24:23 2015
*mangle
:PREROUTING ACCEPT [662769:944442980]
:INPUT ACCEPT [662345:944269301]
:FORWARD ACCEPT [312:135734]
:OUTPUT ACCEPT [429822:27790397]
:POSTROUTING ACCEPT [430333:27954732]
COMMIT
# Completed on Sat Jun  6 14:24:23 2015
# Generated by iptables-save v1.4.21 on Sat Jun  6 14:24:23 2015
*security
:INPUT ACCEPT [933545:1341173989]
:FORWARD ACCEPT [312:135734]
:OUTPUT ACCEPT [597057:38294708]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Sat Jun  6 14:24:23 2015
# Generated by iptables-save v1.4.21 on Sat Jun  6 14:24:23 2015
*raw
:PREROUTING ACCEPT [934249:1341388465]
:OUTPUT ACCEPT [597057:38294708]
:OUTPUT_direct - [0:0]
:PREROUTING_direct - [0:0]
-A PREROUTING -j PREROUTING_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Sat Jun  6 14:24:23 2015
# Generated by iptables-save v1.4.21 on Sat Jun  6 14:24:23 2015
*filter
:INPUT ACCEPT [405:55784]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1969:149844]
-A INPUT -s 192.168.1.39/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.1.1/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -s 192.168.1.1/32 -i wlan0 -p tcp -j ACCEPT
-A INPUT -s 192.168.1.1/32 -i wlan0 -p udp -j ACCEPT
-A INPUT -s 192.168.1.190/32 -i wlan0 -p tcp -j ACCEPT
-A INPUT -s 192.168.1.190/32 -i wlan0 -p udp -j ACCEPT
-A INPUT -s 192.168.1.39/32 -i wlan0 -p tcp -j ACCEPT
-A INPUT -s 192.168.1.39/32 -i wlan0 -p udp -j ACCEPT
-A INPUT -s 192.168.1.0/24 -i wlan0 -j DROP
COMMIT
# Completed on Sat Jun  6 14:24:23 2015
